--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "postcss-cli": "^7.1.2",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -26,6 +28,10 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "fontawesome-svelte": "^2.0.1",
+    "sirv-cli": "^2.0.0",
+    "svelte-spa-router": "^3.2.0"
   }
 }
